# sycl_buffer_access_benchmark

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  dedicated_gpu_selector.h  integrated_gpu_selector.h  working_device_selector.h
bench/: CMakeLists.txt  access_benchmark.h  benchmarks.h  dedicated_gpu_access.cpp  device_access_benchmark.h  host_access_benchmark.h  integrated_gpu_access.cpp
bench/lastrun/: dedicated_gpu_access.json  integrated_gpu_access.json  offset_access.json
cmake/: ConfigGBench.cmake
results/: bench_output_radeon_rx560.txt  bench_output_tesla_k20m.txt
